Fix image overlapping content in a reversed Split with media overflow

--- a/src/assets/sass/protocol/components/_split.scss
+++ b/src/assets/sass/protocol/components/_split.scss
@@ -268,6 +268,12 @@
 
                 .mzp-c-split-media-asset {
                     max-width: none;
+
+                    .mzp-l-split-reversed & {
+                        @include bidi((
+                            (float, right, left),
+                        ));
+                    }
                 }
             }
 
